--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "discord.js-heroku",
+  "name": "discord.js-bot",
   "version": "1.0.0",
   "description": "Discord.js bot on Heroku",
   "main": "bot.js",
